@@ -1,3 +1,8 @@
+2015-12-02  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* gas/arm/armv8-a.d: <ldaexh>: Rename mismatched mnemonics ...
+	<ldah>: ... to this.
+
 2015-12-11  Matthew Wahab  <matthew.wahab@arm.com>
 
 	* gas/aarch64/system-2.d: Enable the statistical profiling
